--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,7 +1,20 @@
+h1{
+  margin-left: 8%;
+  margin-top: 2%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .leaflet-container {
   margin-top: 1vh;
   height: 60vh;
   width: 80%;
   margin-left: 10%;
   margin-bottom: 2vh;
+}
+
+#info-p{
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: darkgray;
+  padding: 2%;
+  font-family: 'Courier New', Courier, monospace;
 }
