--- a/app/src/style.css
+++ b/app/src/style.css
@@ -3,6 +3,12 @@ h1{
   margin-top: 2%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+h2{
+  margin-left: 9%;
+  margin-top: 1%;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: grey;
+}
 .leaflet-container {
   margin-top: 1vh;
   height: 60vh;
